-
Bug
-
Resolution: Done
-
P1: Critical
-
5.13
-
729b1ceb8904a857ba4c804e8a58b9ef4ef7b193
The code below should throw an exception, but it doesn't: it's handled by the catch block (!!).
function weird(func) { try { func(); } catch (thrown) { print("oops:", thrown) return; } print("the next exception should not be handled, but exit the function....") throw("xxx") }; weird(function(){})
- is duplicated by
-
QTBUG-73320 Some strange try catch escalation
-
- Closed
-
For Gerrit Dashboard: QTBUG-72858 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
250352,2 | Correctly scope unwind handlers for try blocks | 5.12 | qt/qtdeclarative | Status: MERGED | +2 | 0 |