Correctly scope unwind handlers for try blocks

Make sure the unwind handler is always reset when leaving the
try block.

This exposes a couple of failures in the ECMAScript test suite
that were before passing by pure luck.

Task-number: QTBUG-72858
Change-Id: I014b1e37c2beff136ecd53a665a2f10933f7e12c
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
Reviewed-by: Erik Verbruggen <erik.verbruggen@qt.io>